--- a/.gitmodules
+++ b/.gitmodules
@@ -958,3 +958,6 @@
 [submodule "PyScapy"]
 	path = PyScapy
 	url = https://github.com/ogreworld/PyScapy
+[submodule "atheros_wlan"]
+	path = atheros_wlan
+	url = https://github.com/feravolt/atheros_wlan
