--- a/.gitmodules
+++ b/.gitmodules
@@ -973,3 +973,6 @@
 [submodule "HandShaker"]
 	path = HandShaker
 	url = https://github.com/d4rkcat/HandShaker
+[submodule "apflood"]
+	path = apflood
+	url = https://github.com/d4rkcat/apflood
