--- a/.gitmodules
+++ b/.gitmodules
@@ -979,3 +979,6 @@
 [submodule "MulitFi"]
 	path = MulitFi
 	url = https://github.com/shpala/MulitFi
+[submodule "ptf-modules"]
+	path = ptf-modules
+	url = https://github.com/vvalien/ptf-modules
