--- a/.gitmodules
+++ b/.gitmodules
@@ -1054,3 +1054,6 @@
 [submodule "haircrack"]
 	path = haircrack
 	url = https://github.com/AdamKnube/haircrack
+[submodule "create_ap"]
+	path = create_ap
+	url = https://github.com/oblique/create_ap
