--- a/.gitmodules
+++ b/.gitmodules
@@ -1063,3 +1063,6 @@
 [submodule "captiv8"]
 	path = captiv8
 	url = https://github.com/wraith-wireless/captiv8
+[submodule "itamae"]
+	path = itamae
+	url = https://github.com/wraith-wireless/itamae
